--- a/CSS folder/styles.css
+++ b/CSS folder/styles.css
@@ -10,14 +10,14 @@
 }
 
 .footer{
-    background-color:grey;
+    background-color:#D1C4E9;
     margin: 0px auto;
     padding:  20px 0px 20px 0px;
 }
 .jumbotron{
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
-    background-color:lightblue;
+    background-color:#9575CD;
 }
 .address{
     font-size:  80%;
